# agentos

./: .dockerignore  .env.demo  .env.example  .gitignore  AGENTOS_UPGRADE.md  AGENTS.md  AUDIT_REPORT.md  CHANGELOG.md  Dockerfile  GUIDE.md  Makefile  README.md  alembic.ini  docker-compose.override.yml.disabled  docker-compose.yml  install.sh  opencode.jsonc  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker.yml  mobile.yml
.opencode/: openwork.json
app/: __init__.py  git_worktree.py  kanban.py  main.py  orchestrator.py  orchestrator_state.py  pulse.py  scheduler.py
app/agents/: __init__.py  base.py  commerce.py  content.py  dev.py  marketing.py  rules.py  sub_agent.py
app/api/: __init__.py  intelligence.py
app/bus/: __init__.py  agent_bus.py
app/config/: policies.yaml  prompts.yaml  settings.py  settings_schema.py
app/learning/: context_enricher.py  reflection.py
app/mcp/: server.py
app/memory/: __init__.py  cache.py  episodic.py  graph_rag.py  knowledge.py  session.py  vector_store.py  workspace.py
app/migrations/: env.py
app/reasoning/: __init__.py  tot_engine.py
app/routes/: admin.py  auth.py  content.py  kanban.py  llm.py  management.py  mcp.py  models.py  workflow.py  worktree.py
app/sandbox/: __init__.py  ephemeral_fs.py  wasm_runner.py
app/schemas/: auth.py  responses.py
app/skills/: registry.py
app/templates/: deploy.html  guide.html
app/tests/: conftest.py  test_admin_routes.py  test_advanced.py  test_agent_bus.py  test_agent_commerce.py  test_agent_modules.py  test_agents_base.py  test_agents_dev.py  test_auth.py  test_auth_routes.py  test_auto_corrector.py  test_computer_use.py  test_config_validator.py  test_coverage_gaps.py  test_debugger.py  test_debugger_agent.py  test_edge_cases.py  test_ephemeral_fs.py  test_git_worktree.py  test_graph_rag.py  (+29 more)
docs/: api.html  deploy.html  guide.html  index.html
mobile/: .env.example  .gitignore  app.json  eas.json  package-lock.json  package.json
scripts/: discover_models.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
ui/: .gitignore  package-lock.json  package.json  setup.sh
(+110 files in other folders)
