[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app/"]

[project]
name = "agentos"
version = "5.0.0"
description = "AgentOS - AI Agent Orchestration System"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
authors = [
    { name = "AgentOS Team" },
]

dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "langgraph==0.3.18",
    "langchain-core==0.3.29",
    "pydantic==2.10.4",
    "pydantic-settings==2.6.1",
    "asyncpg==0.30.0",
    "sqlalchemy[asyncio]==2.0.36",
    "pgvector==0.3.6",
    "redis[hiredis]==5.2.1",
    "httpx==0.28.1",
    "pyyaml==6.0.2",
    "rich==13.9.4",
    "python-dotenv==1.0.1",
    "pyjwt==2.9.0",
    "openai==1.58.1",
    "docker==7.1.0",
    "python-multipart==0.0.20",
    "opentelemetry-api==1.29.0",
    "opentelemetry-sdk==1.29.0",
    "opentelemetry-exporter-otlp==1.29.0",
    "alembic==1.14.0",
    "slowapi==0.1.9",
    "authlib==1.4.1",
    "replicate==0.34.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "pytest-httpx==0.35.0",
    "ruff==0.8.6",
    "mypy==1.14.1",
    "bandit==1.8.0",
    "psycopg2-binary==2.9.10",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
addopts = "-v --cov=app --cov-report=term-missing --cov-fail-under=90"

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
