[package]
name = "agentos"
version = "5.0.0"
description = "AgentOS - Multi-Agent Workflow Orchestrator"
authors = ["HiTechTN"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "agentos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
